<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>de.swa</groupId>
	<artifactId>gmaf-service-mvr</artifactId>
	<version>1.0.5-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>GMAF MVR Service</name>
	<description>GMAF MVR Service Implementation</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>14</maven.compiler.source>
		<maven.compiler.target>14</maven.compiler.target>
		<junit.version>5.8.2</junit.version>
		<jaxb-runtime.version>2.3.2</jaxb-runtime.version>
		<jaxws.version>2.3.7</jaxws.version>
		<jersey.version>2.35</jersey.version>
		<slf4j.version>1.7.36</slf4j.version>
	</properties>

	<repositories>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/marquies/gmaf-mvr</url>
		</repository>
	</repositories>
	
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub marquies Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/marquies/gmaf-mvr</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<!-- REST API Dependencies-->
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-jdk-http</artifactId>
			<version>${jersey.version}</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
			<version>${jersey.version}</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>${jersey.version}</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-server</artifactId>
			<version>${jersey.version}</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-common</artifactId>
			<version>${jersey.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.17.3</version>
		</dependency>
		
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.14.2</version>
		</dependency>
		
		<dependency>
			<groupId>de.swa</groupId>
			<artifactId>gmaf-mvr</artifactId>
			<version>1.0.5-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-jaxrs2</artifactId>
			<version>2.1.13</version>
		</dependency>

		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-jaxrs2-servlet-initializer-v2</artifactId>
			<version>2.1.13</version>
		</dependency>

		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>swagger-ui</artifactId>
			<version>3.6.1</version>
		</dependency>

		<!-- JAX-WS dependencies -->
		<dependency>
			<groupId>com.sun.xml.ws</groupId>
			<artifactId>jaxws-rt</artifactId>
			<version>${jaxws.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.ws</groupId>
			<artifactId>jaxws-tools</artifactId>
			<version>${jaxws.version}</version>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<!-- Test Dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>4.5.1</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>4.5.1</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>de.swa</groupId>
			<artifactId>gmaf-api-mvr</artifactId>
			<version>1.0.3-SNAPSHOT</version>
		</dependency>

	</dependencies>

	<build>
		<finalName>GMAF-Service</finalName>
		<plugins>
			<!-- download source code in Eclipse, best practice -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>false</downloadJavadocs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.glassfish.jaxb</groupId>
						<artifactId>jaxb-runtime</artifactId>
						<version>${jaxb-runtime.version}</version>
					</dependency>
					<!-- API, java.xml.bind module -->
					<dependency>
						<groupId>jakarta.xml.bind</groupId>
						<artifactId>jakarta.xml.bind-api</artifactId>
						<version>3.0.1</version>
					</dependency>

					<!-- Runtime, com.sun.xml.bind module -->
					<dependency>
						<groupId>org.glassfish.jaxb</groupId>
						<artifactId>jaxb-runtime</artifactId>
						<version>4.0.0</version>
					</dependency>
					<dependency>
						<groupId>com.sun.xml.bind</groupId>
						<artifactId>jaxb-impl</artifactId>
						<version>3.0.2</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.base/java.util=ALL-UNNAMED
						--add-opens java.base/java.lang.reflect=ALL-UNNAMED
						--add-opens java.base/sun.security.action=ALL-UNNAMED
						--add-opens java.base/jdk.internal.misc=ALL-UNNAMED
						--add-opens java.base/java.net=ALL-UNNAMED
						--add-opens java.base/java.nio=ALL-UNNAMED
						--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
					</argLine>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<show>private</show>
					<nohelp>true</nohelp>
				</configuration>
			</plugin>

			<!-- Maven Assembly Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<!-- get all project dependencies -->
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<!-- MainClass in mainfest make a executable jar -->
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>de.swa.gmaf.Service</mainClass>
						</manifest>
						<manifestEntries>
							<Add-Opens>java.base/java.lang java.base/java.util java.base/java.lang.reflect java.base/sun.security.action java.base/jdk.internal.misc java.base/java.net java.base/java.nio java.base/java.lang.invoke</Add-Opens>
						</manifestEntries>
					</archive>

				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<!-- bind to the packaging phase -->
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jvnet.jaxb2.maven2</groupId>
				<artifactId>maven-jaxb2-plugin</artifactId>
				<version>0.15.2</version>
				<dependencies>

					<!-- API, java.xml.bind module -->
					<dependency>
						<groupId>jakarta.xml.bind</groupId>
						<artifactId>jakarta.xml.bind-api</artifactId>
						<version>3.0.1</version>
					</dependency>

					<!-- Runtime, com.sun.xml.bind module -->
					<dependency>
						<groupId>org.glassfish.jaxb</groupId>
						<artifactId>jaxb-runtime</artifactId>
						<version>${jaxb-runtime.version}</version>
					</dependency>
					<dependency>
						<groupId>com.sun.xml.bind</groupId>
						<artifactId>jaxb-impl</artifactId>
						<version>2.3.2</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<mainClass>de.swa.gmaf.Service</mainClass>
					<jvmArgs>
						<jvmArg>--add-opens</jvmArg>
						<jvmArg>java.base/java.lang=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-opens</jvmArg>
						<jvmArg>java.base/java.util=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-opens</jvmArg>
						<jvmArg>java.base/java.lang.reflect=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-opens</jvmArg>
						<jvmArg>java.base/sun.security.action=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-opens</jvmArg>
						<jvmArg>java.base/jdk.internal.misc=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-opens</jvmArg>
						<jvmArg>java.base/java.net=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-opens</jvmArg>
						<jvmArg>java.base/java.nio=ALL-UNNAMED</jvmArg>
						<jvmArg>--add-opens</jvmArg>
						<jvmArg>java.base/java.lang.invoke=ALL-UNNAMED</jvmArg>
					</jvmArgs>
				</configuration>
			</plugin>

			<!-- Add manifest to enable running as executable jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>de.swa.gmaf.Service</mainClass>
						</manifest>
						<manifestEntries>
							<Add-Opens>java.base/java.lang java.base/java.util java.base/java.lang.reflect java.base/sun.security.action java.base/jdk.internal.misc java.base/java.net java.base/java.nio java.base/java.lang.invoke</Add-Opens>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
